--- a/uat-release.yml
+++ b/uat-release.yml
@@ -3,9 +3,10 @@
   any_errors_fatal: true
   vars:
     branch: uat
+    repo: devops-cicd-mongo-api
   tasks:
     - name: Set origin to include username and password.
-      shell: "git remote set-url origin https://{{ username }}:{{ password }}@github.com/{{ username }}/jenkins-cicd-mongo-api.git"
+      shell: "git remote set-url origin https://{{ username }}:{{ password }}@github.com/{{ username }}/{{ repo }}"
       no_log: yes
 
     - name: display output
@@ -33,4 +34,4 @@
         git commit release-note -m "{{ note }}"
         git push origin {{ branch }} --follow-tags
         echo "Release Note Pushed: UAT release OK - tagged with {{ out.stdout }}"
-      no_log: yes
+        # no_log: yes
