--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ variables:
   WS: '/opt/projects/mongo-api'
   TO: ${{ parameters.TIMEOUT }}
   tmpfile: '/tmp/test-tmp-file'
-  testfile: '/tmp/test-result'
+  testfile: '/tmp/test-results'
 
 trigger:
 - main
@@ -95,21 +95,21 @@ stages:
           sh test/create.sh
           sh query.sh | tee $(tmpfile) 
           echo "{\"Create\":$(cat $(tmpfile) | jq '.status')}" > $(testfile)
-          sleep 3
+          sleep 1
 
           echo "6. Read test"
-          sh test/read.sh | tee $(testfile)
-          echo "{\"Read\":$(cat $(testfile) | jq '.status')}" >> $(testfile)
-          sleep 3
+          sh test/read.sh | tee $(tmpfile)
+          echo "{\"Read\":$(cat $(tmpfile) | jq '.status')}" >> $(testfile)
+          sleep 1
 
           echo "7. Update test"
-          sh test/update.sh | tee $(testfile)
-          echo "{\"Update\":$(cat $(testfile) | jq '.status')}" >> $(testfile)
-          sleep 3
+          sh test/update.sh | tee $(tmpfile)
+          echo "{\"Update\":$(cat $(tmpfile) | jq '.status')}" >> $(testfile)
+          sleep 1
 
           echo "8. Delete test"
-          sh test/delete.sh | tee $(testfile)
-          echo "{\"Delete\":$(cat $(testfile) | jq '.status')}" >> $(testfile)
+          sh test/delete.sh | tee $(tmpfile)
+          echo "{\"Delete\":$(cat $(tmpfile) | jq '.status')}" >> $(testfile)
                   
 - stage: COMPLETE
   displayName: Ready for Release
