--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -145,6 +145,7 @@ stages:
   displayName: Performance Test
   jobs:
   - job: load
+    timeoutInMinutes: 5
     displayName: MongoDB API Performance Test
     steps: 
       - bash: |
