--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -144,7 +144,7 @@ stages:
   displayName: Performance Test
   jobs:
   - job: load
-    timeoutInMinutes: $(TO)
+    timeoutInMinutes: 5
     displayName: MongoDB API Performance Test
     steps: 
       - bash: |
